fixed hot reloading not working. Also fixed a bug where day popups on calendar were not showing up and added a daily hour text on the popup window on the main app screen

--- a/src/style.css
+++ b/src/style.css
@@ -287,10 +287,16 @@ body {
 }
 
 .timelog-popup h3 {
-  background-color: rgba(255, 255, 255, 0.041);
+  background-color: rgba(90, 185, 149, 0.041);
+  /*   background-color: rgba(255, 255, 255, 0.041); */
   border-radius: 16px;
+  margin-bottom: 10px;
   padding: 10px;
   box-shadow: var(--box-shadow);
+}
+
+.popup-daily-time {
+  text-align: center;
 }
 
 .vc-date__popup {
